parser/tests/snapshots/cfg_snapshots__single if__else statement, leading statements.snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n        let a = 1\n        let b = 1\n        if true {\n          let a = 1\n        } else {\n          let a = 1\n          let b = 1\n        }\n        \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(2)" ]
    3 [ label = "BranchCondition" ]
    4 [ label = "BasicBlock(1)" ]
    5 [ label = "BasicBlock(2)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "Normal" ]
    3 -> 4 [ label = "ConditionTrue" ]
    3 -> 5 [ label = "ConditionFalse" ]
    5 -> 1 [ label = "Normal" ]
    4 -> 1 [ label = "Normal" ]
}

