parser/tests/snapshots/cfg_snapshots__single if__else-if statement, without else block.snap
---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n         if true {\n          let a = 1\n         } else if true {\n           let a = 1\n           let b = 1\n         }\n        \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(0)" ]
    3 [ label = "BasicBlock(1)" ]
    4 [ label = "BasicBlock(0)" ]
    5 [ label = "BasicBlock(2)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "ConditionTrue(2)" ]
    2 -> 4 [ label = "ConditionFalse(2)" ]
    4 -> 5 [ label = "ConditionTrue(3)" ]
    5 -> 1 [ label = "Normal" ]
    3 -> 1 [ label = "Normal" ]
    4 -> 1 [ label = "ConditionFalse(3)" ]
}

